# hmc_vae_for_reco

./: .gitignore  Plot.ipynb  README.md  baselines_reco.ipynb  data_processing.ipynb  pyproject.toml
data/: README_datasets.md  foursquare.tsv  gowalla.tsv
data/clean/foursquare/: test.tsv  test_te.csv  test_tr.csv  train.tsv  tune.tsv  unique_sid.txt  validation_te.csv  validation_tr.csv
data/clean/gowalla/: test.tsv  test_te.csv  train.tsv  tune.tsv  unique_sid.txt  validation_te.csv
data/clean/ml-100k/: test.tsv  train.tsv  tune.tsv
data/clean/ml-20m/: unique_sid.txt
data/clean/ml-25m/: test.tsv  test_te.csv  train.tsv  tune.tsv  unique_sid.txt  validation_te.csv
data/raw/foursquare/: README.txt
data/raw/ml-20m/: ratingsab  ratingsac  ratingsad  ratingsae  ratingsaf  ratingsag  ratingsah  ratingsai  ratingsaj  ratingsak  ratingsal  ratingsam  ratingsan  ratingsao  ratingsap  ratingsaq  ratingsar  ratingsas  ratingsat  ratingsau  ratingsav  ratingsaw  ratingsax  ratingsay  ratingsaz  ratingsba  ratingsbb  ratingsbc  ratingsbd  ratingsbe  ratingsbf  ratingsbg  ratingsbh  ratingsbi  ratingsbj  ratingsbk  ratingsbl  ratingsbm  ratingsbn  ratingsbo  (+160 more)
src/: utils.py
