[tool.poetry]
name = "hmc_vae_for_reco"
version = "0.1.0"
description = ""
authors = ["jbgriesner <jean.benoit.griesner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.0"
torch = "^1.5.0"
tqdm = "^4.45.0"
matplotlib = "^3.2.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
